--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,13 @@
+/*
+Theme Name: Neil 2013
+Theme URI: http://neil.hx.net.au
+Author: Neil
+Author URI: http://neil.hx.net.au
+Version: 1.0
+*/
+
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,400italic);
+
 @mixin webkit-moz-css3($k, $v) {
   -webkit-#{$k}: $v;
   -moz-#{$k}: $v;
@@ -10,6 +20,10 @@
 
 @mixin box-shadow($v) {
   @include webkit-moz-css3(box-shadow, $v);
+}
+
+@mixin text-shadow($v) {
+  @include webkit-moz-css3(text-shadow, $v);
 }
 
 @mixin gradient($from, $to, $start, $end) {
@@ -31,17 +45,33 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 1em;
 }
 
 body {
+  line-height: 1;
   background: top center url(textures/candyhole.png);
+  color: #fff;
+}
+
+a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+img {
+  border: none;
+}
+
+ul, ol {
+  list-style: none;
 }
 
 $bodyWidth:       970px;
 $sidebarWidth:    250px;
 $sidebarPadding:  40px;
 
-.neil2013-body {
+.n13-body {
   position: absolute;
   z-index: 2;
   width: $bodyWidth;
@@ -49,20 +79,50 @@ $sidebarPadding:  40px;
   left: 50%;
 }
 
-.neil2013-sidebar-bg {
+.n13-sidebar-bg {
   background: top right url(textures/dark_leather.jpg);
   position: absolute;
   z-index: 1;
   min-height: 100%;
   height: 100%;
   width: 50%;
-  margin-left: $bodyWidth/-2 + $sidebarWidth;
+  margin-left: $bodyWidth / -2 + $sidebarWidth;
 
-  .neil2013-shadow {
+  .n13-shadow {
     position: absolute;
     right: 0;
     width: 12px;
     height: 100%;
     @include horizontal-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  }
+}
+
+h4, .n13-sidebar {
+  float: left;
+  clear: both;
+  width: $sidebarWidth - $sidebarPadding;
+  text-align: right;
+  font: 300 italic 18px/1.2em Lato;
+  color: #ccc;
+}
+
+h4 {
+  font: 300 normal 26px/1em Lato;
+  padding: 30px 0 16px;
+  @include text-shadow(0 3px 3px #000);
+}
+
+nav.n13-sidebar {
+  width: $sidebarWidth;
+
+  li {
+    height: 18px;
+    padding: 16px $sidebarPadding 16px 0;
+    display: block;
+
+    a {
+      height: 18px;
+      line-height: 1em;
+    }
   }
 }
