--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ Version: 1.0
   font-size: 1em;
 }
 
+body, html {
+  height: 100%;
+}
+
 body {
   line-height: 1;
-  background: top center url(textures/candyhole.png);
   color: #fff;
 }
 
@@ -31,22 +34,33 @@ ul, ol {
   list-style: none;
 }
 
-.n13-body {
-  position: absolute;
-  z-index: 2;
+.n13-background {
+  position: relative;
+  height: 100%;
+  min-width: 970px;
+  background: top center url(textures/candyhole.png);
+}
+
+.n13-container {
+  position: relative;
   width: 970px;
-  margin-left: -485px;
-  left: 50%;
+  margin: 0 auto;
+}
+
+.n13-body {
+  z-index: 2;
+  position: absolute;
+  width: 100%;
 }
 
 .n13-sidebar-bg {
   background: top right url(textures/dark_leather.jpg);
   position: absolute;
   z-index: 1;
-  min-height: 100%;
   height: 100%;
-  width: 50%;
-  margin-left: -235px;
+  width: 5000px;
+  right: 720px;
+  top: 0;
 }
 .n13-sidebar-bg .n13-shadow {
   position: absolute;
@@ -85,7 +99,14 @@ nav.n13-sidebar li {
   padding: 16px 40px 16px 0;
   display: block;
 }
+nav.n13-sidebar li.n13-active {
+  background: right 20px no-repeat url(images/active-menu-item.gif);
+}
 nav.n13-sidebar li a {
   height: 18px;
   line-height: 1em;
+  color: #d4d4d4;
+}
+nav.n13-sidebar li a:hover {
+  color: #fff;
 }
