--- a/style.css
+++ b/style.css
@@ -304,3 +304,22 @@ input, textarea, a.submit {
 input:hover, input:active, textarea:hover, textarea:active, a.submit:hover, a.submit:active {
   border-color: #bbb;
 }
+
+.n13-footer {
+  position: absolute;
+  bottom: 0;
+  z-index: 3;
+  width: 100%;
+  background: url(textures/retina_wood.png);
+  min-height: 190px;
+  clear: both;
+  -webkit-border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 0;
+}
+.n13-footer .n13-footer-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 4;
+}
