--- a/style.scss
+++ b/style.scss
@@ -182,7 +182,9 @@ h1,
 .n13-post .date,
 .n13-comments ul,
 #respond,
-.n13-copyright {
+.n13-copyright,
+.n13-page .content
+{
   width: $bodyWidth - $sidebarWidth - $sidebarPadding;
   float: right;
 }
@@ -241,12 +243,56 @@ h2, h2 a {
   }
 }
 
-.excerpt, .n13-post .content {
+.excerpt, .n13-post .content, .n13-page .content {
   color: $textColor;
   font: 400 normal 20px/1.3em Kreon;
 
   p {
     margin: 1em 0;
+  }
+
+  strong {
+    font-weight: 700;
+  }
+
+  em {
+    color: $subtitleColor;
+  }
+
+  a {
+    color: $titleColor;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .wp-caption {
+
+    a, img {
+      display: block;
+      @include border-radius(10px);
+      overflow: hidden;
+      position: relative;
+    }
+
+    .hi-res {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    p {
+      margin-top: 0;
+      font-size: 14px;
+      text-align: center;
+    }
+  }
+
+  blockquote {
+    font-style: italic;
+    padding-left: 1em;
   }
 }
 
